--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,5 +25,6 @@
 </head>
 <body class="bg-slate-50 text-slate-900 font-sans">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
